test/files/neg/tailrec-4.check
tailrec-4.scala:7: error: could not optimize @tailrec annotated method foo: it contains a recursive call not in tail position
      @tailrec def foo: Int = foo + 1
                                  ^
tailrec-4.scala:12: error: could not optimize @tailrec annotated method foo: it contains a recursive call not in tail position
      @tailrec def foo: Int = foo + 1
                                  ^
tailrec-4.scala:18: error: could not optimize @tailrec annotated method foo: it contains a recursive call not in tail position
      @tailrec def foo: Int = foo + 1
                                  ^
tailrec-4.scala:24: error: could not optimize @tailrec annotated method foo: it contains a recursive call not in tail position
      @tailrec def foo: Int = foo + 1
                                  ^
tailrec-4.scala:32: error: could not optimize @tailrec annotated method foo: it contains a recursive call not in tail position
          @tailrec def foo: Int = foo + 1
                                      ^
5 errors
